package com.example.model_service.dto;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
@AllArgsConstructor
public class ModelItemDto {
    private String id;
    private String name;
    private String url;
}
